<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>apitest</artifactId>
        <groupId>com.lml</groupId>
        <version>0.0.4</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>api-web</artifactId>
    <packaging>jar</packaging>
    <version>0.0.4</version>


    <properties>
        <java.version>24</java.version>
    </properties>

    <dependencies>


        <dependency>
            <groupId>com.lml</groupId>
            <artifactId>api-core</artifactId>
            <version>0.0.4</version>
        </dependency>


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
        </dependency>


        <!-- 依赖reportNg 关联testNg -->
        <!--        <dependency>
                    <groupId>com.github.sdrss</groupId>
                    <artifactId>reportng</artifactId>
                    <version>2.6.3</version>
                </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.uncommons</groupId>-->
        <!--            <artifactId>reportng</artifactId>-->
        <!--            <version>reportng-2.6.4</version>-->
        <!--            <scope>system</scope>-->
        <!--            <systemPath>${project.basedir}/lib/reportng-2.6.4.jar</systemPath>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>velocity</groupId>-->
        <!--            <artifactId>velocity</artifactId>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>com.google.inject</groupId>-->
        <!--            <artifactId>guice</artifactId>-->
        <!--        </dependency>-->


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <!--                <version>2.22.2</version>-->
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/testNG.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <!--                    <properties>-->
                    <!--                        <property>-->
                    <!--                            <name>listener</name>-->
                    <!--                            <value>org.uncommons.reportng.HTMLReporter,org.uncommons.reportng.JUnitXMLReporter</value>-->
                    <!--                        </property>-->
                    <!--                        <property>-->
                    <!--                            <name>usedefaultlisteners</name>-->
                    <!--                            <value>false</value>-->
                    <!--                        </property>-->
                    <!--                        <workingDirectory>target/</workingDirectory>-->
                    <!--                        <forkMode>never</forkMode>-->
                    <!--                    </properties>-->
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
